fix left padding on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,15 @@ body {
 }
 #header_text {
     padding-left: 30px;
-    font-size: 18px;
+    font-size: 15px;
 }
 #header_text2 {
     padding-left: 30px;
-    font-size: 18px;
+    font-size: 15px;
+}
+#header_text3 {
+    padding-left: 30px;
+    font-size: 15px;
 }
 
 /* Input related*/
